# autodiDAQt

./: .gitignore  LEGAL.txt  LICENSE.txt  README.rst  pyproject.toml  setup.py
autodidaqt/: actor.py  core.py  panel.py  version.py  widgets.py
autodidaqt/examples/: dataclass_binding.py  plot_data.py  scanning_custom_plots.py  ui_panels.py
autodidaqt/experiment/: __init__.py  run.py  save.py
autodidaqt/instrument/: managed_instrument.py
autodidaqt/panels/: basic_instrument_panel.py  experiment_panel.py  instrument_manager.py  log_panels.py
autodidaqt/resources/: dropdowns.scss  text_inputs.scss
autodidaqt/ui/: __init__.py  models.py  pg_extras.py
integration_tests/: connect_and_shutdown.py  run_experiment.py  state_summary.py
profiling/: profile_image_acquisition.py  profile_image_data_save.py  profile_manual_scan.py  profile_scalar_data_save.py  profile_uninverted_control.py
scripts/: dev_dataclass_bindings.py  dev_rx_models.py  dev_rx_table.py  generate_message_examples.py
src/daquiri/: __init__.py  actor.py  config.py  core.py  mock.py  notifications.py  panel.py  scan.py  state.py  utils.py  version.py
src/daquiri/examples/: computed_axis.py  dataclass_binding.py  manual_axis.py  manuscript_fig4.py  minimal_app.py  (+9 more)
tests/: conftest.py  test_autodidaqt.py  test_axis.py  test_collections.py  test_data.py  test_experiment.py  test_fsm.py  test_lens.py  test_mock_instruments.py  test_panel.py  test_property_scanning.py  test_registrar.py  test_scan.py  test_state.py  test_utils.py
tests/common/: scans.py
tests/test_ui/: test_widgets.py
(+25 files in other folders)
