[project]
name = "daquiri"
version = "2.0.0"
description = "A framework for building data acquisition systems."
readme = "README.rst"
authors = [
    { name = "Conrad Standsbury", email = "chstansbury@gmail.com" },
    { name = "Jacob Gobbo", email = "gobbo.jacob@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "asyncqt>=0.8.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pymeasure>=0.15.0",
    "pynng>=0.8.1",
    "pyqt-led>=0.0.6",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyrsistent>=0.20.0",
    "python-dotenv>=1.1.1",
    "qtsass>=0.4.0",
    "rx>=3.2.0",
    "scipy>=1.16.2",
    "sphinx-rtd-theme>=3.0.2",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2; sys_platform == 'win32'", "llvmlite>=0.37.0"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
]
